--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/borishejblum/mypkgr092023
+URL: https://github.com/borishejblum/mypkgr092023, https://borishejblum.github.io/mypkgr092023/
 BugReports: https://github.com/borishejblum/mypkgr092023/issues
